include/El/lapack_like/spectral.h

/* Hermitian tridiagonal eigensolvers
   ================================== */
/* HermitianEigSubset */
typedef struct {
  bool indexSubset;
  ElInt lowerIndex, upperIndex;

  bool rangeSubset;
  float lowerBound, upperBound;
} ElHermitianEigSubset_s;
typedef struct {
  bool indexSubset;
  ElInt lowerIndex, upperIndex;

  bool rangeSubset;
  double lowerBound, upperBound;
} ElHermitianEigSubset_d;
/* Compute all eigenvalues
   ----------------------- */
EL_EXPORT ElError ElHermitianTridiagEig_s
( ElMatrix_s d, ElMatrix_s dSub, ElMatrix_s w, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEig_d
( ElMatrix_d d, ElMatrix_d dSub, ElMatrix_d w, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEig_c
( ElMatrix_s d, ElMatrix_c dSub, ElMatrix_s w, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEig_z
( ElMatrix_d d, ElMatrix_z dSub, ElMatrix_d w, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEigDist_s
( ElConstDistMatrix_s d, ElConstDistMatrix_s dSub, 
  ElDistMatrix_s w, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEigDist_d
( ElConstDistMatrix_d d, ElConstDistMatrix_d dSub, 
  ElDistMatrix_d w, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEigDist_c
( ElConstDistMatrix_s d, ElConstDistMatrix_c dSub, 
  ElDistMatrix_s w, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEigDist_z
( ElConstDistMatrix_d d, ElConstDistMatrix_z dSub, 
  ElDistMatrix_d w, ElSortType sort );
/* TODO: Expert version */

/* Compute all eigenpairs
   ---------------------- */
EL_EXPORT ElError ElHermitianTridiagEigPair_s
( ElMatrix_s d, ElMatrix_s dSub, ElMatrix_s w, ElMatrix_s Z, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEigPair_d
( ElMatrix_d d, ElMatrix_d dSub, ElMatrix_d w, ElMatrix_d Z, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEigPair_c
( ElMatrix_s d, ElMatrix_c dSub, ElMatrix_s w, ElMatrix_c Z, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEigPair_z
( ElMatrix_d d, ElMatrix_z dSub, ElMatrix_d w, ElMatrix_z Z, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEigPairDist_s
( ElConstDistMatrix_s d, ElConstDistMatrix_s dSub, 
  ElDistMatrix_s w, ElDistMatrix_s Z, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEigPairDist_d
( ElConstDistMatrix_d d, ElConstDistMatrix_d dSub, 
  ElDistMatrix_d w, ElDistMatrix_d Z, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEigPairDist_c
( ElConstDistMatrix_s d, ElConstDistMatrix_c dSub, 
  ElDistMatrix_s w, ElDistMatrix_c Z, ElSortType sort );
EL_EXPORT ElError ElHermitianTridiagEigPairDist_z
( ElConstDistMatrix_d d, ElConstDistMatrix_z dSub, 
  ElDistMatrix_d w, ElDistMatrix_z Z, ElSortType sort );
/* TODO: Expert version */

/* Compute a subset of eigenvalues
   ------------------------------- */
EL_EXPORT ElError ElHermitianTridiagEigPartial_s
( ElMatrix_s d, ElMatrix_s dSub, 
  ElMatrix_s w, ElSortType sort, ElHermitianEigSubset_s subset );
EL_EXPORT ElError ElHermitianTridiagEigPartial_d
( ElMatrix_d d, ElMatrix_d dSub, 
  ElMatrix_d w, ElSortType sort, ElHermitianEigSubset_d subset );
EL_EXPORT ElError ElHermitianTridiagEigPartial_c
( ElMatrix_s d, ElMatrix_c dSub, 
  ElMatrix_s w, ElSortType sort, ElHermitianEigSubset_s subset );
EL_EXPORT ElError ElHermitianTridiagEigPartial_z
( ElMatrix_d d, ElMatrix_z dSub, 
  ElMatrix_d w, ElSortType sort, ElHermitianEigSubset_d subset );
EL_EXPORT ElError ElHermitianTridiagEigPartialDist_s
( ElConstDistMatrix_s d, ElConstDistMatrix_s dSub, 
  ElDistMatrix_s w, ElSortType sort, ElHermitianEigSubset_s subset );
EL_EXPORT ElError ElHermitianTridiagEigPartialDist_d
( ElConstDistMatrix_d d, ElConstDistMatrix_d dSub, 
  ElDistMatrix_d w, ElSortType sort, ElHermitianEigSubset_d subset );
EL_EXPORT ElError ElHermitianTridiagEigPartialDist_c
( ElConstDistMatrix_s d, ElConstDistMatrix_c dSub, 
  ElDistMatrix_s w, ElSortType sort, ElHermitianEigSubset_s subset );
EL_EXPORT ElError ElHermitianTridiagEigPartialDist_z
( ElConstDistMatrix_d d, ElConstDistMatrix_z dSub, 
  ElDistMatrix_d w, ElSortType sort, ElHermitianEigSubset_d subset );
/* TODO: Expert version */

/* Compute a subset of eigenpairs
   ------------------------------ */
EL_EXPORT ElError ElHermitianTridiagEigPairPartial_s
( ElMatrix_s d, ElMatrix_s dSub, 
  ElMatrix_s w,  ElMatrix_s Z, ElSortType sort, ElHermitianEigSubset_s subset );
EL_EXPORT ElError ElHermitianTridiagEigPairPartial_d
( ElMatrix_d d, ElMatrix_d dSub, 
  ElMatrix_d w, ElMatrix_d Z, ElSortType sort, ElHermitianEigSubset_d subset );
EL_EXPORT ElError ElHermitianTridiagEigPairPartial_c
( ElMatrix_s d, ElMatrix_c dSub, 
  ElMatrix_s w, ElMatrix_c Z, ElSortType sort, ElHermitianEigSubset_s subset );
EL_EXPORT ElError ElHermitianTridiagEigPairPartial_z
( ElMatrix_d d, ElMatrix_z dSub, 
  ElMatrix_d w, ElMatrix_z Z, ElSortType sort, ElHermitianEigSubset_d subset );
EL_EXPORT ElError ElHermitianTridiagEigPairPartialDist_s
( ElConstDistMatrix_s d, ElConstDistMatrix_s dSub, 
  ElDistMatrix_s w, ElDistMatrix_s Z, 
  ElSortType sort, ElHermitianEigSubset_s subset );
EL_EXPORT ElError ElHermitianTridiagEigPairPartialDist_d
( ElConstDistMatrix_d d, ElConstDistMatrix_d dSub, 
  ElDistMatrix_d w, ElDistMatrix_d Z,
  ElSortType sort, ElHermitianEigSubset_d subset );
EL_EXPORT ElError ElHermitianTridiagEigPairPartialDist_c
( ElConstDistMatrix_s d, ElConstDistMatrix_c dSub, 
  ElDistMatrix_s w, ElDistMatrix_c Z,
  ElSortType sort, ElHermitianEigSubset_s subset );
EL_EXPORT ElError ElHermitianTridiagEigPairPartialDist_z
( ElConstDistMatrix_d d, ElConstDistMatrix_z dSub, 
  ElDistMatrix_d w, ElDistMatrix_z Z,
  ElSortType sort, ElHermitianEigSubset_d subset );