include/El/lapack_like/spectral.py

#
#  Copyright (c) 2009-2014, Jack Poulson
#  All rights reserved.
#
#  This file is part of Elemental and is under the BSD 2-Clause License, 
#  which can be found in the LICENSE file in the root directory, or at 
#  http://opensource.org/licenses/BSD-2-Clause
#
from ..core import *
import ctypes

# Hermitian tridiagonal eigensolvers
# ==================================
class HermitianEigSubset_s(ctypes.Structure):
  _fields_ = [("indexSubset",bType),
              ("lowerIndex",iType),("upperIndex",iType),
              ("rangeSubset",bType),
              ("lowerBound",sType),("upperBound",sType)]
class HermitianEigSubset_d(ctypes.Structure):
  _fields_ = [("indexSubset",bType),
              ("lowerIndex",iType),("upperIndex",iType),
              ("rangeSubset",bType),
              ("lowerBound",dType),("upperBound",dType)]

lib.ElHermitianTridiagEig_s.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEig_s.restype = c_uint
lib.ElHermitianTridiagEig_d.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEig_d.restype = c_uint
lib.ElHermitianTridiagEig_c.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEig_c.restype = c_uint
lib.ElHermitianTridiagEig_z.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEig_z.restype = c_uint
lib.ElHermitianTridiagEigDist_s.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigDist_s.restype = c_uint
lib.ElHermitianTridiagEigDist_d.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigDist_d.restype = c_uint
lib.ElHermitianTridiagEigDist_c.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigDist_c.restype = c_uint
lib.ElHermitianTridiagEigDist_z.argtypes = [c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigDist_z.restype = c_uint
lib.ElHermitianTridiagEigPair_s.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigPair_s.restype = c_uint
lib.ElHermitianTridiagEigPair_d.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigPair_d.restype = c_uint
lib.ElHermitianTridiagEigPair_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigPair_c.restype = c_uint
lib.ElHermitianTridiagEigPair_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigPair_z.restype = c_uint
lib.ElHermitianTridiagEigPairDist_s.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigPairDist_s.restype = c_uint
lib.ElHermitianTridiagEigPairDist_d.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigPairDist_d.restype = c_uint
lib.ElHermitianTridiagEigPairDist_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigPairDist_c.restype = c_uint
lib.ElHermitianTridiagEigPairDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint]
lib.ElHermitianTridiagEigPairDist_z.restype = c_uint

lib.ElHermitianTridiagEigPartial_s.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianTridiagEigPartial_s.restype = c_uint
lib.ElHermitianTridiagEigPartial_d.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianTridiagEigPartial_d.restype = c_uint
lib.ElHermitianTridiagEigPartial_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianTridiagEigPartial_c.restype = c_uint
lib.ElHermitianTridiagEigPartial_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianTridiagEigPartial_z.restype = c_uint
lib.ElHermitianTridiagEigPartialDist_s.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianTridiagEigPartialDist_s.restype = c_uint
lib.ElHermitianTridiagEigPartialDist_d.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianTridiagEigPartialDist_d.restype = c_uint
lib.ElHermitianTridiagEigPartialDist_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianTridiagEigPartialDist_c.restype = c_uint
lib.ElHermitianTridiagEigPartialDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianTridiagEigPartialDist_z.restype = c_uint
lib.ElHermitianTridiagEigPairPartial_s.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianTridiagEigPairPartial_s.restype = c_uint
lib.ElHermitianTridiagEigPairPartial_d.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianTridiagEigPairPartial_d.restype = c_uint
lib.ElHermitianTridiagEigPairPartial_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianTridiagEigPairPartial_c.restype = c_uint
lib.ElHermitianTridiagEigPairPartial_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianTridiagEigPairPartial_z.restype = c_uint
lib.ElHermitianTridiagEigPairPartialDist_s.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianTridiagEigPairPartialDist_s.restype = c_uint
lib.ElHermitianTridiagEigPairPartialDist_d.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianTridiagEigPairPartialDist_d.restype = c_uint
lib.ElHermitianTridiagEigPairPartialDist_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_s]
lib.ElHermitianTridiagEigPairPartialDist_c.restype = c_uint
lib.ElHermitianTridiagEigPairPartialDist_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_uint,HermitianEigSubset_d]
lib.ElHermitianTridiagEigPairPartialDist_z.restype = c_uint
def HermitianTridiagEig(d,dSub,vectors=False,sort=ASCENDING,subset=None):
  if type(d) is Matrix:
    w = Matrix(d.tag)
    if vectors:
      X = Matrix(dSub.tag)
      if subset == None:
        if   dSub.tag == sTag: 
          lib.ElHermitianTridiagEigPair_s(d.obj,dSub.obj,w.obj,X.obj,sort)
        elif dSub.tag == dTag:
          lib.ElHermitianTridiagEigPair_d(d.obj,dSub.obj,w.obj,X.obj,sort)
        elif dSub.tag == cTag:
          lib.ElHermitianTridiagEigPair_c(d.obj,dSub.obj,w.obj,X.obj,sort)
        elif dSub.tag == zTag:
          lib.ElHermitianTridiagEigPair_z(d.obj,dSub.obj,w.obj,X.obj,sort)
        else: raise Exception('Unsupported datatype')
      else:
        if   dSub.tag == sTag: 
          lib.ElHermitianTridiagEigPairPartial_s \
          (d.obj,dSub.obj,w.obj,X.obj,sort,subset)
        elif dSub.tag == dTag:
          lib.ElHermitianTridiagEigPairPartial_d \
          (d.obj,dSub.obj,w.obj,X.obj,sort,subset)
        elif dSub.tag == cTag:
          lib.ElHermitianTridiagEigPairPartial_c \
          (d.obj,dSub.obj,w.obj,X.obj,sort,subset)
        elif dSub.tag == zTag:
          lib.ElHermitianTridiagEigPairPartial_z \
          (d.obj,dSub.obj,w.obj,X.obj,sort,subset)
        else: raise Exception('Unsupported datatype')
      return w, X
    else:
      if subset == None:
        if   dSub.tag == sTag: 
          lib.ElHermitianTridiagEigPair_s(d.obj,dSub.obj,w.obj,sort)
        elif dSub.tag == dTag:
          lib.ElHermitianTridiagEigPair_d(d.obj,dSub.obj,w.obj,sort)
        elif dSub.tag == cTag:
          lib.ElHermitianTridiagEigPair_c(d.obj,dSub.obj,w.obj,sort)
        elif dSub.tag == zTag:
          lib.ElHermitianTridiagEigPair_z(d.obj,dSub.obj,w.obj,sort)
        else: raise Exception('Unsupported datatype')
      else:
        if   dSub.tag == sTag: 
          lib.ElHermitianTridiagEigPairPartial_s \
          (d.obj,dSub.obj,w.obj,sort,subset)
        elif dSub.tag == dTag:
          lib.ElHermitianTridiagEigPairPartial_d \
          (d.obj,dSub.obj,w.obj,sort,subset)
        elif dSub.tag == cTag:
          lib.ElHermitianTridiagEigPairPartial_c \
          (d.obj,dSub.obj,w.obj,sort,subset)
        elif dSub.tag == zTag:
          lib.ElHermitianTridiagEigPairPartial_z \
          (d.obj,dSub.obj,w.obj,sort,subset)
        else: raise Exception('Unsupported datatype')
      return w
  elif type(d) is DistMatrix:
    w = DistMatrix(d.tag,STAR,STAR,d.Grid())
    if vectors:
      X = DistMatrix(dSub.tag,STAR,VR,dSub.Grid())
      if subset == None:
        if   dSub.tag == sTag: 
          lib.ElHermitianTridiagEigPairDist_s(d.obj,dSub.obj,w.obj,X.obj,sort)
        elif dSub.tag == dTag:
          lib.ElHermitianTridiagEigPairDist_d(d.obj,dSub.obj,w.obj,X.obj,sort)
        elif dSub.tag == cTag:
          lib.ElHermitianTridiagEigPairDist_c(d.obj,dSub.obj,w.obj,X.obj,sort)
        elif dSub.tag == zTag:
          lib.ElHermitianTridiagEigPairDist_z(d.obj,dSub.obj,w.obj,X.obj,sort)
        else: raise Exception('Unsupported datatype')
      else:
        if   dSub.tag == sTag: 
          lib.ElHermitianTridiagEigPairPartialDist_s \
          (d.obj,dSub.obj,w.obj,X.obj,sort,subset)
        elif dSub.tag == dTag:
          lib.ElHermitianTridiagEigPairPartialDist_d \
          (d.obj,dSub.obj,w.obj,X.obj,sort,subset)
        elif dSub.tag == cTag:
          lib.ElHermitianTridiagEigPairPartialDist_c \
          (d.obj,dSub.obj,w.obj,X.obj,sort,subset)
        elif dSub.tag == zTag:
          lib.ElHermitianTridiagEigPairPartialDist_z \
          (d.obj,dSub.obj,w.obj,X.obj,sort,subset)
        else: raise Exception('Unsupported datatype')
      return w, X
    else:
      if subset == None:
        if   dSub.tag == sTag: 
          lib.ElHermitianTridiagEigPairDist_s(d.obj,dSub.obj,w.obj,sort)
        elif dSub.tag == dTag:
          lib.ElHermitianTridiagEigPairDist_d(d.obj,dSub.obj,w.obj,sort)
        elif dSub.tag == cTag:
          lib.ElHermitianTridiagEigPairDist_c(d.obj,dSub.obj,w.obj,sort)
        elif dSub.tag == zTag:
          lib.ElHermitianTridiagEigPairDist_z(d.obj,dSub.obj,w.obj,sort)
        else: raise Exception('Unsupported datatype')
      else:
        if   dSub.tag == sTag: 
          lib.ElHermitianTridiagEigPairPartialDist_s \
          (d.obj,dSub.obj,w.obj,sort,subset)
        elif dSub.tag == dTag:
          lib.ElHermitianTridiagEigPairPartialDist_d \
          (d.obj,dSub.obj,w.obj,sort,subset)
        elif dSub.tag == cTag:
          lib.ElHermitianTridiagEigPairPartialDist_c \
          (d.obj,dSub.obj,w.obj,sort,subset)
        elif dSub.tag == zTag:
          lib.ElHermitianTridiagEigPairPartialDist_z \
          (d.obj,dSub.obj,w.obj,sort,subset)
        else: raise Exception('Unsupported datatype')
      return w
  else: raise Exception('Unsupported matrix type')
